--- a/lab07/templates/fit.html
+++ b/lab07/templates/fit.html
@@ -30,7 +30,7 @@
     <input type="hidden" name="imgs" value={{ imgs }}>
     <input type="hidden" name="x" value={{ x }}>
     <input type="hidden" name="y" value={{ y }}>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Fit">
 </form>
 
 </body>
